@@ -8,8 +8,6 @@
 <body>
 <h1>Experts only</h1>
 <dl style="margin-left: 40px;">
-  <dt>Rollback</dt>
-  <dd cshelp=IDH_SETTINGS_ADVANCED3_ROLLBACK>This option is not used currently.</dd>
   <dt>Max Hash Speed</dt>
   <dd cshelp=IDH_SETTINGS_ADVANCED3_MAX_HASH_SPEED>This is the speed at which DC++ will hash your files, in
 MiB/s.
