@@ -412,24 +412,21 @@ EXSTYLE WS_EX_ACCEPTFILES | WS_EX_STATICEDGE
 CAPTION "Experts only"
 FONT 8, "MS Shell Dlg", 0, 0, 0x0
 BEGIN
-    RTEXT           "Rollback",IDC_SETTINGS_ROLLBACK,7,10,57,8
-    EDITTEXT        IDC_ROLLBACK,69,7,45,14,ES_AUTOHSCROLL | ES_NUMBER
-    LTEXT           "B",IDC_SETTINGS_B,117,10,16,8
-    RTEXT           "Max Hash Speed",IDC_SETTINGS_MAX_HASH_SPEED,7,27,57,8
-    EDITTEXT        IDC_MAX_HASH_SPEED,69,24,45,14,ES_AUTOHSCROLL
-    LTEXT           "MiB/s",IDC_SETTINGS_MBS,117,27,16,8
-    RTEXT           "PM history",IDC_SETTINGS_PM_HISTORY,7,44,57,8
-    EDITTEXT        IDC_SHOW_LAST_LINES_LOG,69,41,45,14,ES_AUTOHSCROLL
-    RTEXT           "Mini slot size",IDC_SETTINGS_TEXT_MINISLOT,7,61,57,8
-    EDITTEXT        IDC_SET_MINISLOT_SIZE,69,58,45,14,ES_AUTOHSCROLL
-    LTEXT           "KiB",IDC_SETTINGS_KB2,117,61,16,8
-    RTEXT           "Max filelist size",IDC_SETTINGS_MAX_FILELIST_SIZE,7,78,57,8
-    EDITTEXT        IDC_MAX_FILELIST_SIZE,69,75,45,14,ES_AUTOHSCROLL
-    LTEXT           "MiB",IDC_SETTINGS_MB,117,78,16,8
-    RTEXT           "PID",IDC_SETTINGS_PID,7,95,57,8
-    EDITTEXT        IDC_PRIVATE_ID,69,92,45,14,ES_AUTOHSCROLL
-    RTEXT           "Auto refresh time",IDC_SETTINGS_AUTO_REFRESH_TIME,7,112,57,8
-    EDITTEXT        IDC_AUTO_REFRESH_TIME,69,110,45,14,ES_AUTOHSCROLL
+    RTEXT           "Max Hash Speed",IDC_SETTINGS_MAX_HASH_SPEED,7,10,57,8
+    EDITTEXT        IDC_MAX_HASH_SPEED,69,7,45,14,ES_AUTOHSCROLL
+    LTEXT           "MiB/s",IDC_SETTINGS_MBS,117,10,16,8
+    RTEXT           "PM history",IDC_SETTINGS_PM_HISTORY,7,27,57,8
+    EDITTEXT        IDC_SHOW_LAST_LINES_LOG,69,24,45,14,ES_AUTOHSCROLL
+    RTEXT           "Mini slot size",IDC_SETTINGS_TEXT_MINISLOT,7,44,57,8
+    EDITTEXT        IDC_SET_MINISLOT_SIZE,69,41,45,14,ES_AUTOHSCROLL
+    LTEXT           "KiB",IDC_SETTINGS_KB2,117,44,16,8
+    RTEXT           "Max filelist size",IDC_SETTINGS_MAX_FILELIST_SIZE,7,61,57,8
+    EDITTEXT        IDC_MAX_FILELIST_SIZE,69,58,45,14,ES_AUTOHSCROLL
+    LTEXT           "MiB",IDC_SETTINGS_MB,117,61,16,8
+    RTEXT           "PID",IDC_SETTINGS_PID,7,78,57,8
+    EDITTEXT        IDC_PRIVATE_ID,69,75,45,14,ES_AUTOHSCROLL
+    RTEXT           "Auto refresh time",IDC_SETTINGS_AUTO_REFRESH_TIME,7,95,57,8
+    EDITTEXT        IDC_AUTO_REFRESH_TIME,69,93,45,14,ES_AUTOHSCROLL
     RTEXT           "Write buffer size",IDC_SETTINGS_WRITE_BUFFER,134,10,70,8
     EDITTEXT        IDC_BUFFERSIZE,208,7,41,14,ES_AUTOHSCROLL
     LTEXT           "KiB",IDC_SETTINGS_KB,252,10,16,8
