@@ -279,7 +279,6 @@
 #define IDC_REMOVE_MENU 2138
 #define IDC_RENAME 2139
 #define IDC_RESULT 2140
-#define IDC_ROLLBACK 2141
 #define IDC_SEARCH_HISTORY 2142
 #define IDC_SEARCH_HISTORY_SPIN 2143
 #define IDC_SEARCH_STRING 2144
@@ -366,7 +365,6 @@
 #define IDC_SETTINGS_PUBLIC_HUB_LIST_URL 2225
 #define IDC_SETTINGS_RAW 2226
 #define IDC_SETTINGS_REQUIRES_RESTART 2227
-#define IDC_SETTINGS_ROLLBACK 2228
 #define IDC_SETTINGS_S1 2229
 #define IDC_SETTINGS_S2 2230
 #define IDC_SETTINGS_S3 2231
